# neat_c-gpu

./: .gitignore  CMakeLists.txt  README.md  euler.py  format_io.c  format_io.h  main.c  utils.h
.github/workflows/: cmake.yml
kernels/: euler.cl  evolution.cl  kernel.cl  kernels.cl  pcg.cl  vector_add_kernel.cl
